:sparkles: add endpoint to schedule activities
