# app/controllers/api/admin/schedule_activities_controller.rb
@@ -1,0 +1,15 @@
+class Api::Admin::ScheduleActivitiesController < ApplicationController
+  def create
+    valid_schedule_activity = ScheduleActivity::CreateForm.new(schedule_activity_params).validate!
+    schedule_activity = Resources::Saver.call(valid_schedule_activity)
+    render json: {
+      data: ScheduleActivity::Presenter.new(schedule_activity)
+    }
+  end
+
+  private
+
+  def schedule_activity_params
+    params.require(:schedule_activity).permit(:schedule_id, :activity_id, :seats)
+  end
+end
