# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_12_12_043401) do
+ActiveRecord::Schema.define(version: 2020_12_12_053124) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -64,6 +64,17 @@ ActiveRecord::Schema.define(version: 2020_12_12_043401) do
     t.index ["uid"], name: "index_oauth_applications_on_uid", unique: true
   end
 
+  create_table "schedule_activities", force: :cascade do |t|
+    t.bigint "schedule_id"
+    t.bigint "activity_id"
+    t.integer "seats", null: false
+    t.integer "taken_seats", default: 0, null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["activity_id"], name: "index_schedule_activities_on_activity_id"
+    t.index ["schedule_id"], name: "index_schedule_activities_on_schedule_id"
+  end
+
   create_table "schedules", force: :cascade do |t|
     t.datetime "begin_at", null: false
     t.datetime "finish_at", null: false
@@ -86,4 +97,6 @@ ActiveRecord::Schema.define(version: 2020_12_12_043401) do
   add_foreign_key "oauth_access_grants", "users", column: "resource_owner_id"
   add_foreign_key "oauth_access_tokens", "oauth_applications", column: "application_id"
   add_foreign_key "oauth_access_tokens", "users", column: "resource_owner_id"
+  add_foreign_key "schedule_activities", "activities"
+  add_foreign_key "schedule_activities", "schedules"
 end
